--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@ text-align: center;
 }
 
    </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-43J3SQX1P8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-43J3SQX1P8');
+</script>
 </head>
 
 <body width="100%">
